--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-pandas
-plotly
-numpy
-PyMuPDF
-spacy
-scikit-learn
-matplotlib
-reportlab
-python-dateutil
+numpy==1.24.3
+pandas==2.0.3
+streamlit==1.29.0
+plotly==5.18.0
+PyMuPDF==1.23.7
+spacy==3.7.2
+scikit-learn==1.3.2
+matplotlib==3.8.2
+reportlab==4.0.8
+python-dateutil==2.8.2
