--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
-numpy>=1.26.0
-pandas>=2.1.0
-streamlit>=1.29.0
-plotly>=5.18.0
-PyMuPDF>=1.23.7
-spacy>=3.7.2
-scikit-learn>=1.3.2
-matplotlib>=3.8.2
-reportlab>=4.0.8
-python-dateutil>=2.8.2
+# Core dependencies
+numpy==1.26.2
+pandas==2.1.4
+
+# ML & Data Processing
+scikit-learn==1.3.2
+spacy==3.7.2
+thinc==8.2.1
+
+# Visualization
+matplotlib==3.8.2
+plotly==5.18.0
+
+# PDF Processing
+PyMuPDF==1.23.7
+reportlab==4.0.8
+
+# Other utilities
+python-dateutil==2.8.2
+streamlit==1.29.0
